2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentFrameworkPrivate.h:
	* Source/NSApplication.m(-finishLaunching):
	* Source/NSDocumentController.m (-setAutosavingDelay:,
	-reopenDocumentForURL:withContentsOfURL:error:,	-_autosaveDirectory,
	-autosaveDocuments:, -reopenAutosavedDocuments,
	-recordAutosavedDocument:):
	* Source/NSDocument.m (-initForURL:withContentsOfURL:ofType:error,
	-writeWithBackupToFile:ofType:saveOperation:,
	-writeSafelyToURL:ofType:forSaveOperation:error:,
	-revertDocumentToSaved:, close, -setAutosavedContentsFileURL:,
	-autosaveDocumentsWithDelegate:didAutosaveSelector:contextInfo:,
	-_removeAutosavedContentsFile):
	Implement document autosaving.

2008-12-14  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSavePanel.m (-browserDidScroll:): Perform column
	validation whenever the browser is scrolled, since only the
	contents of the visible columns is validated.

2008-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m: Reorganize the image caching code to make it
	easier to understand and change.

2008-12-12 19:36-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m: Added change suggested by Doug in 
	bug #25078.  This should fix the problem in SVN.

2008-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m (-drawTitle:inRect:ofColumn:, -dealloc): 
	Replaced the last fix here with a slightly better one that removes
	the ownership of the shared titlecell as soon as it isn't needed
	any more. The old code caused redundant redraws.

2008-12-12 02:04-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibLoading.h: Added new method 
	nibInstantiateWithCoder: to do the initialization normally done
	in NSView when not in IB/Gorm.
	* Source/GSNibLoading.m: Added implementation of new method and
	also re-wrote part of NSCustomView.
	* Source/NSView.m: Added an NSAssert to assure that no subview
	ever decoded is an NSCustomView.
